# mcstarter

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  flake.nix
src/: build.rs  cache.rs  config.rs  download.rs  env.rs  hash.rs  lock.rs  main.rs  mcstarter.yml  merger.rs
